
#------------------------------------
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------

Package author: Mikhail Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V02-00-47
2023-05-19 Mikhail Dubrovin
- app/dcs - use optional uc.RepoManager(dirrepo=DIR_REPO,...

Tag: V02-00-46
2023-03-17 Mikhail Dubrovin
- rename pixel_status_extra > status_extra, pixel_datast > status_data
  - src/CalibPars.py
  - src/CalibParsStore.py
  - src/DCStore.py
  - src/GenericCalibPars.py
  - src/GlobalUtils.py

Tag: V02-00-45
2023-03-14 Mikhail Dubrovin
- src/CalibPars.py - add method pixel_status_extra, cosmetic improvements
- src/CalibParsStore.py - add nda = o.pixel_status_extra() in Usage
- src/DCStore.py - add o.add_ctype('pixel_status_extra')
- src/GenericCalibPars.py - add method pixel_status_extra, cosmetic improvements
- src/GlobalUtils.py - add PIXEL_STATUS_EXTRA

Tag: V02-00-44
2023-02-14 Mikhail Dubrovin
- src/GeometryAccess.py - add method convert_mask2d_to_ndarray

Tag: V02-00-43
2022-11-10 Mikhail Dubrovin
- tag all earlier updates

2022-11-03 Mikhail Dubrovin
- COMMON ISSUES:
        - add/use parameter group='ps-users' for dir/file ownership
        - change dirmode=2775, filemode=664
  app/dcs
  src/DCFileName.py
  src/DCMethods.py
  src/DCUtils.py
  src/GlobalUtils.py
  src/NDArrIO.py - common + cosmetic remove spaces, comments etc.

Tag: V02-00-42
2022-10-17 Mikhail Dubrovin
 - src/CalibParsStore.py - code cleaning, env.calibDir().replace('//','/')

Tag: V02-00-41
2022-10-14 Mikhail Dubrovin
  app/dcs - dirmode=0o2774, filemode=0o664
  src/DCFileName.py - env.calibDir().replace('//','/')
  src/GlobalUtils.py - use DIR_ROOT_DATA

Tag: V02-00-40
2022-09-28 Mikhail Dubrovin
  app/geometry_convert - add optional parameters --dsname, --zpvname, --f_um
  src/UtilsConvert.py - by Chuck's request add/use method z_correction_from_data(args)

Tag: V02-00-39